--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
               Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "Skyline Community Search in Multi-Valued Networks," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
             </li>
             <li class="paper">
-              Jie Zhang, Jiajing Wu, Yongxiang Xia, <strong>Fanghua Ye</strong>, "Measuring Cohesion of Software Systems Using Weighted Directed Complex Networks," in IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
+              Jie Zhang, Jiajing Wu, Yongxiang Xia, <strong>Fanghua Ye</strong>, "Measuring Cohesion of Software Systems Using Weighted Directed Complex Networks," IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
             </li>
             <li class="paper">
-              Jiali Dong, <strong>Fanghua Ye</strong>, Wuhui Chen, Jiajing Wu, "Identifying Influential Nodes in Complex Networks via Semi-Local Centrality," in IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
+              Jiali Dong, <strong>Fanghua Ye</strong>, Wuhui Chen, Jiajing Wu, "Identifying Influential Nodes in Complex Networks via Semi-Local Centrality," IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
             </li>
             <li	class="paper">
               Zibin Zheng, <strong>Fanghua Ye</strong>, Rong-Hua Li, Guohui Ling, Tan Jin, "Finding Weighted K-Truss Communities in Large Networks," Information Sciences, 417 (2017): 344-360.
