--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<p align="justify"> 
                 <li>[2018/07] I come to visit CUHK this summer.</li>
                 <li>[2018/06] Three papers are submitted to ICDM 2018.</li>
                 <li>[2018/05] Two papers are submitted to ICSOC 2018.</li>
                 <li>[2018/05] One paper is submitted to CIKM 2018.</li>
                 <li>[2018/01] One paper is submitted to IJCAI 2018.</li>
                 <li>[2017/10] I am awarded the National Scholarship.</li>
+		</p>
               </div>
             </div>
         </div>
@@ -296,10 +298,12 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<p align="justify"> 
                 <li>2017, awarded National Scholarship</li>
                 <li>2017, awarded First Class Postgraduate Scholarship</li>
                 <li>2016, awarded First Class Postgraduate Scholarship</li>
                 <li>2015, awarded National Endeavor Scholarship</li>
+		</p>
             </div>
           </div>
         </div>
@@ -312,7 +316,9 @@
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-                <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
+		<p align="justify"> 
+                  <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
+		</p>
             </div>
           </div>
         </div>
