--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<p align="justify"> 
                 <li>[2018/07] I come to visit CUHK this summer.</li>
                 <li>[2018/06] Three papers are submitted to ICDM 2018.</li>
                 <li>[2018/05] Two papers are submitted to ICSOC 2018.</li>
                 <li>[2018/05] One paper is submitted to CIKM 2018.</li>
                 <li>[2018/01] One paper is submitted to IJCAI 2018.</li>
                 <li>[2017/10] I am awarded the National Scholarship.</li>
-		</p>
               </div>
             </div>
         </div>
@@ -263,7 +261,6 @@
             <br><h2>Publications</h2>
             <div class="container">
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
-            <p align="justify"> 
 			      <li class="paper">
               <strong>Fanghua Ye</strong>, Zitai Chen, Hui Qian, Rui Li, Chuan Chen, Zibin Zheng, "New Approaches in Multi-View Clustering," IntechOpen: Recent Applications in Data Clustering, (2018).
             </li>
@@ -285,7 +282,6 @@
             <li class="paper">
               <strong>Fanghua Ye</strong>, Zibin Zheng, Chuan Chen, Yuren Zhou, "DC-RSF: A Dynamic and Customized Reputation System Framework for Joint Cloud Computing," IEEE 37th International Conference on Distributed Computing Systems Workshops (<a href="http://icdcs2017.gatech.edu/">ICDCSW</a>), 2017.
             </li>
-			      </p>
 			</div>
 			</div>
       </div>
@@ -298,12 +294,10 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<p align="justify"> 
                 <li>2017, awarded National Scholarship</li>
                 <li>2017, awarded First Class Postgraduate Scholarship</li>
                 <li>2016, awarded First Class Postgraduate Scholarship</li>
                 <li>2015, awarded National Endeavor Scholarship</li>
-		</p>
             </div>
           </div>
         </div>
@@ -315,10 +309,8 @@
         <div class="col-md-12">
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
-            <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<p align="justify"> 
+            <div class="col-md-12" style="text-align: justify; vertical-align: middle;"> 
                   <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
-		</p>
             </div>
           </div>
         </div>
