--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="col-md-12">
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
-              <div class="col-md-12" style="text-align: justify; vertical-align: middle;">
+              <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
                 <li>[2018/07] I come to visit CUHK this summer.</li>
                 <li>[2018/06] Three papers are submitted to ICDM 2018.</li>
                 <li>[2018/05] Two papers are submitted to ICSOC 2018.</li>
@@ -293,7 +293,7 @@
         <div class="col-md-12">
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
-            <div class="col-md-12" style="text-align: justify; vertical-align: middle;">
+            <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
                 <li>2017, awarded National Scholarship</li>
                 <li>2017, awarded First Class Postgraduate Scholarship</li>
                 <li>2016, awarded First Class Postgraduate Scholarship</li>
@@ -309,7 +309,7 @@
         <div class="col-md-12">
             <br><h2>Teaching Experience</h2>
           <div class="container" style="margin-top: 15px;">
-            <div class="col-md-12" style="text-align: justify; vertical-align: middle;"> 
+            <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
                   <li>Teaching Assistant, Data Mining, Spring 2017, Sun Yat-sen University</li>
             </div>
           </div>
