--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="col-xs-12 col-md-9">
           <h2><strong>Fanghua Ye 叶方华</strong></h2> <br>
           <i>Master Student, Sun Yat-sen University</i> <br> <br>
-          <i><strong>Email:</strong> smartyfh AT outlook DOT com</i> <br> <br>
+          <i><strong>Email:</strong> smartyfh@outlook.com</i> <br> <br>
           <i><strong>Address:</strong> Room 521, National Supercomputer Center in Guangzhou</i>
       </div>    	
 </div>
