--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
                 <li>[2018/07] I come to visit CUHK this summer.</li>
-                <li>[2018/06] Three papers are submitted to ICDM 2018.</li>
-                <li>[2018/05] Two papers are submitted to ICSOC 2018.</li>
+		<li>[2018/06] One paper is submitted to ICDM 2018.</li>
                 <li>[2018/05] One paper is submitted to CIKM 2018.</li>
                 <li>[2018/01] One paper is submitted to IJCAI 2018.</li>
                 <li>[2017/10] I am awarded the National Scholarship.</li>
