--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
 			      <li class="paper">
               <strong>Fanghua Ye</strong>, Zitai Chen, Hui Qian, Rui Li, Chuan Chen, Zibin Zheng, "New Approaches in Multi-View Clustering," IntechOpen: Recent Applications in Data Clustering, (2018).
             </li>
+            <li class = "paper">
+	      <strong>Fanghua Ye</strong>, Chuan Chen, Jie Zhang, Jiajing Wu, Zibin Zheng, "An Adaptive Semi-Local Algorithm for Node Ranking in Large Complex Networks," The 16th International Conference on Service-Oriented Computing (<a href="http://web.science.mq.edu.au/~qsheng/icsoc2018/index.html#about">ICSOC'18</a>), 2018.
+            </li>
             <li class="paper">
               Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "Skyline Community Search in Multi-Valued Networks," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
             </li>
