--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Set the viewport so this responsive site displays correctly on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <meta name="keywords" content="Fanghua Ye, fanghua ye">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico "media="screen"/>
     <meta name="author" content="Fanghua Ye, yefh5 (at) mail2.sysu.edu.cn">
 
