--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2018/08] One first-authored paper is accepted by CIKM 2018.</li>
                 <li>[2018/07] I come to visit CUHK this summer.</li>
 		<li>[2018/06] One paper is submitted to ICDM 2018.</li>
                 <li>[2018/05] One paper is submitted to CIKM 2018.</li>
@@ -263,6 +264,9 @@
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
 	    <li class="paper">
               <strong>Fanghua Ye</strong>, Zitai Chen, Hui Qian, Rui Li, Chuan Chen, Zibin Zheng, "New Approaches in Multi-View Clustering," IntechOpen: Recent Applications in Data Clustering, (2018).
+            </li>
+            <li class="paper">
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="www.cikm2018.units.it/">CIKM'18</a>), (2018).
             </li>
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Chuan Chen, Jie Zhang, Jiajing Wu, Zibin Zheng, "An Adaptive Semi-Local Algorithm for Node Ranking in Large Complex Networks," The 16th International Conference on Service-Oriented Computing (<a href="http://web.science.mq.edu.au/~qsheng/icsoc2018/index.html#about">ICSOC'18</a>), 2018.
