--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <strong>Fanghua Ye</strong>, Zitai Chen, Hui Qian, Rui Li, Chuan Chen, Zibin Zheng, "New Approaches in Multi-View Clustering," IntechOpen: Recent Applications in Data Clustering, (2018).
             </li>
             <li class="paper">
-              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="www.cikm2018.units.it/">CIKM'18</a>), (2018).
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), (2018).
             </li>
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Chuan Chen, Jie Zhang, Jiajing Wu, Zibin Zheng, "An Adaptive Semi-Local Algorithm for Node Ranking in Large Complex Networks," The 16th International Conference on Service-Oriented Computing (<a href="http://web.science.mq.edu.au/~qsheng/icsoc2018/index.html#about">ICSOC'18</a>), 2018.
