--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<li>[2018/08] One first-authored paper is accepted by CIKM 2018.</li>
+		<li>[2018/08] One first-authored full paper is accepted by CIKM 2018.</li>
                 <li>[2018/07] I come to visit CUHK this summer.</li>
 		<li>[2018/06] One paper is submitted to ICDM 2018.</li>
                 <li>[2018/05] One paper is submitted to CIKM 2018.</li>
@@ -264,6 +264,9 @@
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
 	    <li class="paper">
               <strong>Fanghua Ye</strong>, Zitai Chen, Hui Qian, Rui Li, Chuan Chen, Zibin Zheng, "New Approaches in Multi-View Clustering," IntechOpen: Recent Applications in Data Clustering, (2018).
+            </li>
+	    <li class="paper">
+              <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "Identifying Influential Individuals on Large-Scale Social Networks: A Community based Approach," IEEE Access, (2018).
             </li>
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
