--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "Identifying Influential Individuals on Large-Scale Social Networks: A Community based Approach," IEEE Access, (2018).
             </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining series (<a href="http://icdm2018.org/">ICDM'18</a>), 2018.
+	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018.
             </li>
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
