--- a/index.html
+++ b/index.html
@@ -181,6 +181,23 @@
 	<div class="container" style="margin-top: 0px;">
         <div class="col-md-12 content">
             <br><h2>Selected Projects</h2>
+		
+	    <!-- cikm -->
+            <div class="container" style="margin-top: 45px;">
+              <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
+                <img src="images/18DANMF.png" width="300">
+              </div>
+
+              <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
+                <strong>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</strong> <span class="label label-danger">New</span><br> 
+                <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng<br>
+                ACM International Conference on Information and Knowledge Management (<strong>CIKM</strong>)<br>
+                Turin, Italy, October 2018<br>
+
+                <a href="Documents/18DANMF.pdf" class="btn btn-default btn-sm">Paper</a>
+              </div>
+            </div>  
+		
 
             <!-- skycomm -->
             <div class="container" style="margin-top: 45px;">
