--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <strong>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</strong> <span class="label label-danger">New</span><br> 
                 <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng<br>
                 ACM International Conference on Information and Knowledge Management (<strong>CIKM</strong>)<br>
-                Turin, Italy, October 2018<br>
+                Turin, Italy, October 2018<br> <br>
 
                 <a href="Documents/18DANMF.pdf" class="btn btn-default btn-sm">Paper</a>
               </div>
