--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
               <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "Identifying Influential Individuals on Large-Scale Social Networks: A Community based Approach," IEEE Access, (2018).
             </li>
             <li class="paper">
+              Zhiwei Lin, <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "BGN: Identifying Influential Nodes in Complex Networks via Backward Generating Networks," IEEE Access, (2018).
+            </li>
+            <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018.
             </li>
             <li class="paper">
