--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                 Turin, Italy, October 2018<br> <br>
 
                 <a href="Documents/18DANMF.pdf" class="btn btn-default btn-sm">Paper</a>
+		<a href="https://github.com/smartyfh/DANMF" class="btn btn-default btn-sm">Code</a>
               </div>
             </div>  
 		
