--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
 
         <p align="justify"> My current research interests include network science, algorithm design, machine learning, and data mining. I have a strong passion in developing machine learning algorithms for mining deep knowledge from graph/relational structured data.</p>
 
-        <p align="justify"> For more detailed personal information, please refer to my <a href="documents/cv.pdf">CV</a>.</p>
-
         <p align="justify"> <strong>I am applying to PhD programs for Autumn 2019 entry. If you are seeking self-motivated and self-disciplined students, I am always an option!</strong></p>          
     </div>
 </div>
@@ -213,6 +211,7 @@
                 Houston, TX, USA, June 2018<br>
 
                 <a href="https://dl.acm.org/citation.cfm?id=3183736" class="btn btn-default btn-sm">Paper</a>
+		<a href="https://github.com/smartyfh/MAIC" class="btn btn-default btn-sm">Code</a>
               </div>
             </div>  
 
