--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<li>2018, awarded CIKM 2018 Student Travel Grant</li>
+		<li>2018, awarded SIGIR Student Travel Grant for CIKM 2018</li>
                 <li>2018, awarded First Class Postgraduate Scholarship</li>
 		<li>2017, awarded National Scholarship</li>
                 <li>2017, awarded First Class Postgraduate Scholarship</li>
