--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2018/10] One paper is submitted to ICDE 2019.</li>
 		<li>[2018/08] Two papers are accepted by CIKM 2018 and ICDM 2018 respectively.</li>
                 <li>[2018/07] I come to visit CUHK this summer.</li>
 		<li>[2018/06] One paper is submitted to ICDM 2018.</li>
