--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
               <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "Identifying Influential Individuals on Large-Scale Social Networks: A Community based Approach," IEEE Access, (2018).
             </li>
             <li class="paper">
+              Rui Li, <strong>Fanghua Ye</strong>, Shaoan Xie, Chuan Chen, Zibin Zheng, "Digging into It: Community Detection via Hidden Attributes Analysis," Neurocomputing, (2018).
+            </li>
+            <li class="paper">
               Zhiwei Lin, <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "BGN: Identifying Influential Nodes in Complex Networks via Backward Generating Networks," IEEE Access, (2018).
             </li>
             <li class="paper">
