--- a/index.html
+++ b/index.html
@@ -321,6 +321,22 @@
 			</div>
       </div>
     </div>
+	
+	
+   <!-- Activity -->
+    <div class="container" style="margin-top: 0px;">
+    <a name="Activity" style="visibility: hidden;"></a>
+        <div class="col-md-12">
+            <br><h2>Invited Journal Reviewer</h2>
+          <div class="container" style="margin-top: 15px;">
+            <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
+                  <li>Social Network Analysis and Mining</li>
+		  <li>IEEE Access</li>
+            </div>
+          </div>
+        </div>
+    </div>
+	
 
     <!-- Awards -->
     <div class="container" style="margin-top: 0px;">
@@ -329,6 +345,7 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>2018, awarded National Scholarship</li>
 		<li>2018, awarded ICDM 2018 Student Travel Award</li>
 		<li>2018, awarded SIGIR Student Travel Grant for CIKM 2018</li>
                 <li>2018, awarded First Class Postgraduate Scholarship</li>
