--- a/index.html
+++ b/index.html
@@ -98,11 +98,7 @@
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
 		<li>[2018/10] One paper is submitted to ICDE 2019.</li>
 		<li>[2018/08] Two papers are accepted by CIKM 2018 and ICDM 2018 respectively.</li>
-                <li>[2018/07] I come to visit CUHK this summer.</li>
-		<li>[2018/06] One paper is submitted to ICDM 2018.</li>
-                <li>[2018/05] One paper is submitted to CIKM 2018.</li>
-                <li>[2018/01] One paper is submitted to IJCAI 2018.</li>
-                <li>[2017/10] I am awarded the National Scholarship.</li>
+		<li>[2018/07] I come to visit CUHK this summer.</li>
               </div>
             </div>
         </div>
@@ -204,7 +200,7 @@
               </div>
 
               <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
-                <strong>Skyline Community Search in Multi-valued Networks</strong> <span class="label label-danger">New</span><br> 
+                <strong>Skyline Community Search in Multi-valued Networks</strong><br> 
                 Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng<br>
                 ACM SIGMOD/PODS International Conference on Management of Data (<strong>SIGMOD</strong>)<br>
                 Houston, TX, USA, June 2018<br>
@@ -275,7 +271,7 @@
     <div class="container" style="margin-top: 0px;">
     <a name="publication" style="visibility: hidden;"></a>
         <div class="col-md-10 content">
-            <br><h2>Publications</h2>
+            <br><h2>Selected Publications</h2>
             <div class="container">
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
 	    <li class="paper">
@@ -288,34 +284,16 @@
               Rui Li, <strong>Fanghua Ye</strong>, Shaoan Xie, Chuan Chen, Zibin Zheng, "Digging into It: Community Detection via Hidden Attributes Analysis," Neurocomputing, (2018).
             </li>
             <li class="paper">
-              Zhiwei Lin, <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "BGN: Identifying Influential Nodes in Complex Networks via Backward Generating Networks," IEEE Access, (2018).
-            </li>
-            <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018.
             </li>
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
-            </li>
-            <li class="paper">
-	      <strong>Fanghua Ye</strong>, Chuan Chen, Jie Zhang, Jiajing Wu, Zibin Zheng, "An Adaptive Semi-Local Algorithm for Node Ranking in Large Complex Networks," The 16th International Conference on Service-Oriented Computing (<a href="http://web.science.mq.edu.au/~qsheng/icsoc2018/index.html#about">ICSOC'18</a>), 2018.
-            </li>
+	    </li>
             <li class="paper">
               Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "Skyline Community Search in Multi-Valued Networks," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
             </li>
-            <li class="paper">
-              Jie Zhang, Jiajing Wu, Yongxiang Xia, <strong>Fanghua Ye</strong>, "Measuring Cohesion of Software Systems Using Weighted Directed Complex Networks," IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
-            </li>
-            <li class="paper">
-              Jiali Dong, <strong>Fanghua Ye</strong>, Wuhui Chen, Jiajing Wu, "Identifying Influential Nodes in Complex Networks via Semi-Local Centrality," IEEE International Symposium on Circuits and Systems (<a href="http://www.iscas2018.org/">ISCAS'18</a>), 2018.
-            </li>
             <li	class="paper">
               Zibin Zheng, <strong>Fanghua Ye</strong>, Rong-Hua Li, Guohui Ling, Tan Jin, "Finding Weighted K-Truss Communities in Large Networks," Information Sciences, 417 (2017): 344-360.
-            </li>
-            <li class="paper">
-              <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "Efficient Influential Individuals Discovery on Service-Oriented Social Networks: A Community-Based Approach," The 15th International Conference on Service-Oriented Computing (<a href="http://www.icsoc.spilab.es/">ICSOC'17</a>), 2017.
-            </li>
-            <li class="paper">
-              <strong>Fanghua Ye</strong>, Zibin Zheng, Chuan Chen, Yuren Zhou, "DC-RSF: A Dynamic and Customized Reputation System Framework for Joint Cloud Computing," IEEE 37th International Conference on Distributed Computing Systems Workshops (<a href="http://icdcs2017.gatech.edu/">ICDCSW</a>), 2017.
             </li>
 			</div>
 			</div>
