--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               Rui Li, <strong>Fanghua Ye</strong>, Shaoan Xie, Chuan Chen, Zibin Zheng, "Digging into It: Community Detection via Hidden Attributes Analysis," Neurocomputing, (2018).
             </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018.
+	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018. [<a href="https://github.com/smartyfh/AANMF">code</a>]
             </li>
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
@@ -311,7 +311,7 @@
 		<li>2017, awarded National Scholarship</li>
                 <li>2017, awarded First Class Postgraduate Scholarship</li>
                 <li>2016, awarded First Class Postgraduate Scholarship</li>
-                <li>2015, awarded National Endeavor Scholarship</li>
+                <li>2015, awarded National Inspirational Scholarship</li>
             </div>
           </div>
         </div>
