--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<li>[2019/02] I join the group of Prof. Xiaokui Xiao at The National University of Singapore as a research assistant.</li>
+		<li>[2019/02] I join the group of Prof. Xiaokui Xiao at National University of Singapore as a research assistant.</li>
 		<li>[2018/08] Two papers are accepted by CIKM 2018 and ICDM 2018 respectively.</li>
 		<li>[2018/07] I come to visit CUHK this summer.</li>
               </div>
@@ -139,6 +139,13 @@
     <div class="col-md-12">
             <br><h2>Experiences</h2>
       <div class="container" style="margin-top: 25px;">
+	<div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
+            <img src="images/nus.jpg" height="150">
+            <p>Visiting Student<br>
+               National University of Singapore<br>
+               February 2019 - Now
+            </p>
+        </div>
         <div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
             <img src="images/cuhk.jpg" height="150">
             <p>Visiting Student<br>
