--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <br><h2>Experiences</h2>
       <div class="container" style="margin-top: 25px;">
 	<div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
-            <img src="images/nus.jpg" height="150">
+            <img src="images/nus.png" height="150">
             <p>Visiting Student<br>
                National University of Singapore<br>
                February 2019 - Now
@@ -153,6 +153,7 @@
                Summer, 2018
             </p>
         </div>
+	<br>
         <div class="col-xs-12 col-md-3" style="text-align: center; align: middle;">
             <img src="images/wechat.jpg" height="150">
             <p>Research Intern<br>
