--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="container" style="margin-top: 25px;">
 	<div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
             <img src="images/nus.png" height="150">
-            <p>Visiting Student<br>
+            <p>Research Assistant<br>
                National University of Singapore<br>
                February 2019 - Now
             </p>
