--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                Summer, 2018
             </p>
         </div>
-	<br>
+      </div>
+      <div class="container" style="margin-top: 25px;">
         <div class="col-xs-12 col-md-3" style="text-align: center; align: middle;">
             <img src="images/wechat.jpg" height="150">
             <p>Research Intern<br>
