--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
         <div class="col-md-12">
             <br><h2>Invited Journal Reviewer</h2>
           <div class="container" style="margin-top: 15px;">
-            <div class="col-md-12" style="text-align: middle; vertical-align: middle;"> 
+            <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		   <li>World Wide Web Journal</li>
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
             </div>
