--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <img src="images/nus.png" height="150">
             <p>Research Assistant<br>
                National University of Singapore<br>
-               February 2019 - Now
+               February 2019 - May 2019
             </p>
         </div>
         <div class="col-xs-12 col-md-6" style="text-align: center; align: middle;">
