--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <i>Master Student, Sun Yat-sen University</i> <br> <br>
           <i><strong>Email:</strong> smartyfh@outlook.com</i> <br> <br>
           <i><strong>Address:</strong> Room 521, National Supercomputer Center in Guangzhou</i>
+	  <i><strong><a href="https://scholar.google.com/citations?user=UXN7iUsAAAAJ&hl=en"><font color="red"> [Google Scholar] </font></a></strong></i>
       </div>    	
 </div>
 
