--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
           	<img src="images/profile2.jpg"  style="max-height: 69%; max-width: 69%;">
       </div>
       <div class="col-xs-12 col-md-9">
-          <h2><strong>Fanghua Ye 叶方华</strong></h2> <br>
+          <h2><strong>Fanghua Ye 叶方华 <a href="https://scholar.google.com/citations?user=UXN7iUsAAAAJ&hl=en"><font color="red"> [Google Scholar] </font></a></strong></h2> <br>
           <i>Master Student, Sun Yat-sen University</i> <br> <br>
           <i><strong>Email:</strong> smartyfh@outlook.com</i> <br> <br>
           <i><strong>Address:</strong> Room 521, National Supercomputer Center in Guangzhou</i>
-	  <i><strong><a href="https://scholar.google.com/citations?user=UXN7iUsAAAAJ&hl=en"><font color="red"> [Google Scholar] </font></a></strong></i>
       </div>    	
 </div>
 
