--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2019/08] One paper is accepted by ICDM 2019.</li>
 		<li>[2019/02] I join the group of Prof. Xiaokui Xiao at National University of Singapore as a research assistant.</li>
 		<li>[2018/08] Two papers are accepted by CIKM 2018 and ICDM 2018 respectively.</li>
 		<li>[2018/07] I come to visit CUHK this summer.</li>
@@ -268,6 +269,9 @@
             <div class="container">
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
 	    
+	    <li class="paper">
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "Discrete Overlapping Community Detection with Pseudo Supervision," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
+	    </li>
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018. [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
             </li>
