--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "Discrete Overlapping Community Detection with Pseudo Supervision," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
 	    </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," TNNLS, 2019.
+	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," IEEE Transactions on Neural Networks and Learning Systems, 2019.
 	    </li>    
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018. [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
