--- a/index.html
+++ b/index.html
@@ -185,6 +185,24 @@
         <div class="col-md-12 content">
             <br><h2>Selected Projects</h2>
 		
+	    <!-- icdm19 -->
+            <div class="container" style="margin-top: 45px;">
+              <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
+                <img src="images/19DNMF.png" width="300">
+              </div>
+
+              <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
+                <strong>Discrete Overlapping Community Detection with Pseudo Supervision</strong> <span class="label label-danger">New</span><br> 
+                <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu<br>
+                International Conference on Data Mining (<strong>ICDM</strong>)<br>
+                Beijing, China, November 2019<br> <br>
+
+                <a href="Documents/19DNMF.pdf" class="btn btn-default btn-sm">Paper</a>
+		<a href="https://github.com/smartyfh/DNMF" class="btn btn-default btn-sm">Code</a>
+              </div>
+            </div>  
+		
+		
 	    <!-- cikm -->
             <div class="container" style="margin-top: 45px;">
               <div class="col-xs-12 col-lg-4" style="text-align: middle; vertical-align: middle;">
@@ -192,7 +210,7 @@
               </div>
 
               <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
-                <strong>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</strong> <span class="label label-danger">New</span><br> 
+                <strong>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</strong> <br> 
                 <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng<br>
                 ACM International Conference on Information and Knowledge Management (<strong>CIKM</strong>)<br>
                 Turin, Italy, October 2018<br> <br>
