--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018. [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper">
-              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM 27th International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
 	    </li>
 	    <li class="paper">
               Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "Skyline Community Search in Multi-Valued Networks," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
