--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," IEEE Transactions on Neural Networks and Learning Systems, 2019.
 	    </li>    
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018. [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
+	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
