--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <div class="col-xs-12 col-md-8" style="text-align: left; vertical-align: middle;">
                 <strong>Discrete Overlapping Community Detection with Pseudo Supervision</strong> <span class="label label-danger">New</span><br> 
                 <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu<br>
-                International Conference on Data Mining (<strong>ICDM</strong>)<br>
+                IEEE International Conference on Data Mining (<strong>ICDM</strong>)<br>
                 Beijing, China, November 2019<br> <br>
 
                 <a href="Documents/19DNMF.pdf" class="btn btn-default btn-sm">Paper</a>
