--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <meta name="keywords" content="Fanghua Ye, fanghua ye">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico "media="screen"/>
-    <meta name="author" content="Fanghua Ye, yefh5 (at) mail2.sysu.edu.cn">
+    <meta name="author" content="Fanghua Ye, smartyfh (at) outlook.com">
 
-    <title>Fanghua Ye - SYSU</title>
+    <title>Fanghua Ye - UCL</title>
     <!-- Include bootstrap CSS -->
     <link href="includes/bootstrap/css/bootstrap-yip.css" rel="stylesheet">
     <!--<link href="includes/bootstrap.min-4.css" rel="stylesheet">-->
@@ -68,7 +68,7 @@
       </div>
       <div class="col-xs-12 col-md-9">
           <h2><strong>Fanghua Ye 叶方华 </strong><a href="https://scholar.google.com/citations?user=UXN7iUsAAAAJ&hl=en"><font color="red"> [Google Scholar] </font></a></h2> <br>
-          <i>Master Student, Sun Yat-sen University</i> <br> <br>
+          <i>PhD Student, University College London</i> <br> <br>
           <i><strong>Email:</strong> smartyfh@outlook.com</i> <br> <br>
           <i><strong>Address:</strong> Room 521, National Supercomputer Center in Guangzhou</i>
       </div>    	
@@ -77,7 +77,7 @@
 
 <div class="container" style="margin-top: 12px;">
     <div class="col-xs-12 col-md-11" style="vertical-align: middle; font-size: 108%">
-        <p align="justify"> <br> Welcome to my homepage! My name is Fanghua Ye. I have been a master student at the School of Data and Computer Science of <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> since 2016. I am working in the <a href="http://inpluslab.com/">InPlus Lab</a>, under the supervision of <a href="http://www.zibinzheng.com/">Prof. Zibin Zheng</a>. Before that, I received my bachelor's degree in Computer Science and Technology from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a> (Elite school of top 5% undergraduates).
+        <p align="justify"> <br> Welcome to my homepage! My name is Fanghua Ye. I am a PhD student at UCL. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm"> Sun Yat-sen University and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a> (Elite school of top 5% undergraduates).
         </p>
 
         <p align="justify"> My current research interests include network science, algorithm design, machine learning, and data mining. I have a strong passion in developing machine learning algorithms for mining deep knowledge from graph/relational structured data.</p>         
