--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           <h2><strong>Fanghua Ye 叶方华 </strong><a href="https://scholar.google.com/citations?user=UXN7iUsAAAAJ&hl=en"><font color="red"> [Google Scholar] </font></a></h2> <br>
           <i>PhD Student, University College London</i> <br> <br>
           <i><strong>Email:</strong> smartyfh@outlook.com</i> <br> <br>
-          <i><strong>Address:</strong> Room 521, National Supercomputer Center in Guangzhou</i>
+          <i><strong>Address:</strong>90 High Holborn, London, WC1V 6LJ</i>
       </div>    	
 </div>
 
 
 <div class="container" style="margin-top: 12px;">
     <div class="col-xs-12 col-md-11" style="vertical-align: middle; font-size: 108%">
-        <p align="justify"> <br> Welcome to my homepage! My name is Fanghua Ye. I am a PhD student at UCL. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a> (Elite school of top 5% undergraduates).
+        <p align="justify"> <br> Welcome to my homepage! My name is Fanghua Ye. I am a PhD student at UCL, working with Prof. Emine Yilmaz. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a> (Elite school of top 5% undergraduates).
         </p>
 
         <p align="justify"> My current research interests include network science, algorithm design, machine learning, and data mining. I have a strong passion in developing machine learning algorithms for mining deep knowledge from graph/relational structured data.</p>         
