--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
     <div class="container" style="margin-top: 30px;">
       	<div class="page-header" style="margin-top: 0px;"></div>
 		<div class="col-md-3">
-			<a href="https://info.flagcounter.com/VmUe"><img src="https://s05.flagcounter.com/count2/VmUe/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_Welcome/labels_1/pageviews_1/flags_0/percent_0/" alt="Free counters!" border="0"></a>
+			<!-- <a href="https://info.flagcounter.com/VmUe"><img src="https://s05.flagcounter.com/count2/VmUe/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_Welcome/labels_1/pageviews_1/flags_0/percent_0/" alt="Free counters!" border="0"></a>
+			-->
+                <a href="https://clustrmaps.com/site/1b1ct"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5W1lvXU9npr2Sjw0tB0_udEIM1nrn-aRDWM05oThOtc&cl=ffffff" /></a>
         </div>
 
     </div>
