--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>2019, awarded UCL Research Studentship</li>
 		<li>2018, awarded National Scholarship, Ministry of Education</li>
 		<li>2018, awarded ICDM 2018 Student Travel Award</li>
 		<li>2018, awarded SIGIR Student Travel Grant for CIKM 2018</li>
