--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		<li>[2020/04] One co-author paper is accepted by VLDB Journal.</li>
 		<li>[2020/03] One co-author paper is accepted by TOIS.</li>
 		<li>[2019/08] One paper is accepted by ICDM 2019.</li>
 		<li>[2019/02] I join the group of Prof. Xiaokui Xiao at National University of Singapore as a research assistant.</li>
