--- a/index.html
+++ b/index.html
@@ -288,12 +288,14 @@
             <br><h2>Selected Publications</h2>
             <div class="container">
             <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
-	    
+	    <li class="paper">
+              Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "Nonuniform Hyper-Network Embedding with Dual Mechanism," ACM Transactions on Information Systems (TOIS), 2020.
+            </li>
 	    <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "Discrete Overlapping Community Detection with Pseudo Supervision," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
 	    </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," IEEE Transactions on Neural Networks and Learning Systems, 2019.
+	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019.
 	    </li>    
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
@@ -323,6 +325,7 @@
 		   <li>World Wide Web Journal</li>
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
+                  <li>Engineering Reports</li>
             </div>
           </div>
         </div>
