--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
 	    <li class="paper">
               Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "Nonuniform Hyper-Network Embedding with Dual Mechanism," ACM Transactions on Information Systems (TOIS), 2020.
             </li>
+            <li class="paper">
+              Lu Wang, Yu Song, Hong Huang, <strong>Fanghua Ye</strong>, Xuanhua Shi and Hai Jin, "Modeling Heterogeneous Edges to Represent Networks with Graph Auto-Encoder," International Conference on Database Systems for Advanced Applications (DASFFA), 2020.
+            </li>
 	    <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "Discrete Overlapping Community Detection with Pseudo Supervision," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
 	    </li>
