--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
     <div class="col-md-12">
             <br><h2>Education</h2>
       <div class="container" style="margin-top: 25px;">
+      <div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
+            <img src="images/ucl.jpg" height="150">
+            <p>PhD<br>
+               Computer Science<br>
+                University College London<br>
+                2019 - Now
+            </p>
+        </div>
         <div class="col-xs-12 col-md-4" style="text-align: center; align: middle;">
             <img src="images/sysu.jpg" height="150">
             <p>Master of Science<br>
