--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="col-xs-12 col-md-3" style="text-align: center; align: middle;">
             <img src="images/sysu.jpg" height="150">
             <p>Master of Science<br>
-               Computer Science and Technology<br>
+               Computer Science<br>
                 Sun Yat-sen University<br>
                 2016 - 2019
             </p>
