--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
 	    <li class="paper">
-              Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "Nonuniform Hyper-Network Embedding with Dual Mechanism," ACM Transactions on Information Systems (TOIS), 2020.
+              Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "<u>Nonuniform Hyper-Network Embedding with Dual Mechanism</u>," ACM Transactions on Information Systems (TOIS), 2020.
             </li>
             <li class="paper">
               Lu Wang, Yu Song, Hong Huang, <strong>Fanghua Ye</strong>, Xuanhua Shi, Hai Jin, "Modeling Heterogeneous Edges to Represent Networks with Graph Auto-Encoder," International Conference on Database Systems for Advanced Applications (DASFAA), 2020.
