--- a/index.html
+++ b/index.html
@@ -300,25 +300,25 @@
               Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "<u>Nonuniform Hyper-Network Embedding with Dual Mechanism</u>," ACM Transactions on Information Systems (TOIS), 2020.
             </li>
             <li class="paper">
-              Lu Wang, Yu Song, Hong Huang, <strong>Fanghua Ye</strong>, Xuanhua Shi, Hai Jin, "Modeling Heterogeneous Edges to Represent Networks with Graph Auto-Encoder," International Conference on Database Systems for Advanced Applications (DASFAA), 2020.
+              Lu Wang, Yu Song, Hong Huang, <strong>Fanghua Ye</strong>, Xuanhua Shi, Hai Jin, "<u>Modeling Heterogeneous Edges to Represent Networks with Graph Auto-Encoder</u>," International Conference on Database Systems for Advanced Applications (DASFAA), 2020.
             </li>
 	    <li class="paper">
-              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "Discrete Overlapping Community Detection with Pseudo Supervision," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "<u>Discrete Overlapping Community Detection with Pseudo Supervision</u>," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
 	    </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "Homophily Preserving Community Detection," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019.
+	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "<u>Homophily Preserving Community Detection</u>," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019.
 	    </li>    
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "Adaptive Affinity Learning for Accurate Community Detection," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
+	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "<u>Adaptive Affinity Learning for Accurate Community Detection</u>," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
             </li>
             <li class="paper">
-              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection," ACM International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
+              <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "<u>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</u>," ACM International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
 	    </li>
 	    <li class="paper">
-              Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "Skyline Community Search in Multi-Valued Networks," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
+              Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "<u>Skyline Community Search in Multi-Valued Networks</u>," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
             </li>
             <li	class="paper">
-              Zibin Zheng, <strong>Fanghua Ye</strong>, Rong-Hua Li, Guohui Ling, Tan Jin, "Finding Weighted K-Truss Communities in Large Networks," Information Sciences, 417 (2017): 344-360.
+              Zibin Zheng, <strong>Fanghua Ye</strong>, Rong-Hua Li, Guohui Ling, Tan Jin, "<u>Finding Weighted K-Truss Communities in Large Networks</u>," Information Sciences, 417 (2017): 344-360.
             </li>
 			</div>
 			</div>
