--- a/index.html
+++ b/index.html
@@ -330,13 +330,14 @@
     <div class="container" style="margin-top: 0px;">
     <a name="Activity" style="visibility: hidden;"></a>
         <div class="col-md-12">
-            <br><h2>Invited Journal Reviewer</h2>
+            <br><h2>Invited Reviewer</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
 		   <li>World Wide Web Journal</li>
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
                   <li>Engineering Reports</li>
+		  <li>Sub-reviewer for: KDD 2020, CIKM 2018, IJCAI 2018</li>
             </div>
           </div>
         </div>
