--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 
 
                 <a href="https://www.sciencedirect.com/science/article/pii/S0020025516308118" class="btn btn-default btn-sm">Paper</a>
+		<a href="https://github.com/smartyfh/KEP-Index" class="btn btn-default btn-sm">Code</a>
               </div>
             </div>   
 
