--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, Rong-Hua Li, Jeffrey Xu Yu, "<u>Discrete Overlapping Community Detection with Pseudo Supervision</u>," IEEE International Conference on Data Mining (<a href="http://icdm2019.bigke.org/">ICDM'19</a>), 2019.
 	    </li>
             <li class="paper">
-	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "<u>Homophily Preserving Community Detection</u>," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019.
+	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "<u>Homophily Preserving Community Detection</u>," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019. [<a href="https://github.com/smartyfh/HPNMF"><font size="4" color="red">code</a>]
 	    </li>    
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "<u>Adaptive Affinity Learning for Accurate Community Detection</u>," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
