--- a/index.html
+++ b/index.html
@@ -315,6 +315,9 @@
             <li class="paper">
               <strong>Fanghua Ye</strong>, Chuan Chen, Zibin Zheng, "<u>Deep Autoencoder-like Nonnegative Matrix Factorization for Community Detection</u>," ACM International Conference on Information and Knowledge Management (<a href="http://www.cikm2018.units.it/">CIKM'18</a>), 2018.
 	    </li>
+            <li class="paper">
+	       <strong>Fanghua Ye</strong>, Jiahao Liu, Chuan Chen, Guohui Ling, Zibin Zheng, Yuren Zhou, "<u>Identifying Influential Individuals on Large-Scale Social Networks: A Community Based Approach</u>," IEEE Access, 2018. [<a href="https://github.com/smartyfh/CRIM"><font size="4" color="red">code</font></a>]
+            </li>
 	    <li class="paper">
               Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "<u>Skyline Community Search in Multi-Valued Networks</u>," ACM SIGMOD/PODS International Conference on Management of Data (<a href="https://sigmod2018.org/">SIGMOD'18</a>), 2018.
             </li>
