--- a/index.html
+++ b/index.html
@@ -337,11 +337,12 @@
             <br><h2>Invited Reviewer</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
+		   <li>IEEE Transactions on Cybernetics</li>
 		   <li>World Wide Web Journal</li>
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
                   <li>Engineering Reports</li>
-		  <li>Sub-reviewer for: KDD 2020, CIKM 2018, IJCAI 2018</li>
+		  <li>Sub-reviewer for: KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
             </div>
           </div>
         </div>
