--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p align="justify"> <br> Welcome! My name is Fanghua Ye. I am a fully-funded PhD student at UCL, working with Prof. Emine Yilmaz. Prior to that, I received my master's degree from <a href="http://www.sysu.edu.cn/2012/cn/index.htm">Sun Yat-sen University</a> and my bachelor's degree from <a href="http://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>, where I studied in <a href="http://www.yingcai.uestc.edu.cn/">Yingcai Honors College of UESTC</a>.
         </p>
 
-        <p align="justify"> My current research interests include network science, algorithm design, machine learning, and data mining. I have a strong passion in developing machine learning algorithms for mining deep knowledge from graph/relational structured data.</p>         
+        <p align="justify"> My current research is focused on conversational AI. I also have a strong passion in graph learning.</p>         
     </div>
 </div>
 
