--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
             <br><h2>Selected Publications</h2>
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
+            <li class="paper">
+	      Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Guoren Wang, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "<u>Finding Skyline Communities in Multi-Valued Networks</u>," VLDB Journal, 2020.
+	    </li>
 	    <li class="paper">
               Jie Huang, Chuan Chen, <strong>Fanghua Ye</strong>, Weibo Hu, Zibin Zheng, "<u>Nonuniform Hyper-Network Embedding with Dual Mechanism</u>," ACM Transactions on Information Systems (TOIS), 2020.
             </li>
@@ -342,7 +345,7 @@
                   <li>Social Network Analysis and Mining</li>
 		  <li>IEEE Access</li>
                   <li>Engineering Reports</li>
-		  <li>Sub-reviewer for: KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
+		  <li>Sub-reviewer for: CIKM 2020, KDD 2020, CIKM 2018, IJCAI 2018, ICSOC 2017</li>
             </div>
           </div>
         </div>
