--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="container" style="margin-top: 0px;">
     <a name="publication" style="visibility: hidden;"></a>
         <div class="col-md-11 content">
-            <br><h2>Selected Publications</h2>
+            <br><h2>Publications</h2>
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
             <li class="paper">
@@ -337,7 +337,7 @@
     <div class="container" style="margin-top: 0px;">
     <a name="Activity" style="visibility: hidden;"></a>
         <div class="col-md-12">
-            <br><h2>Invited Reviewer</h2>
+            <br><h2>Academic Services</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
 		   <li>IEEE Transactions on Cybernetics</li>
