--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
             <br><h3>What's New</h3>
             <div class="container" style="margin-top: 15px;">
               <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<li>[2020/04] One co-author paper is accepted by VLDB Journal.</li>
-		<li>[2020/03] One co-author paper is accepted by TOIS.</li>
-		<li>[2019/08] One paper is accepted by ICDM 2019.</li>
+		<li>[2020/08] One co-author paper is accepted to TKDD.</li>
+		<li>[2020/04] One co-author paper is accepted to VLDB Journal.</li>
+		<li>[2020/03] One co-author paper is accepted to TOIS.</li>
+		<li>[2019/08] One paper is accepted to ICDM 2019.</li>
 		<li>[2019/02] I join the group of Prof. Xiaokui Xiao at National University of Singapore as a research assistant.</li>
-		<li>[2018/08] Two papers are accepted by CIKM 2018 and ICDM 2018 respectively.</li>
+		<li>[2018/08] Two papers are accepted to CIKM 2018 and ICDM 2018 respectively.</li>
 		<li>[2018/07] I come to visit CUHK this summer.</li>
               </div>
             </div>
@@ -359,7 +360,7 @@
             <br><h2>Selected Awards</h2>
           <div class="container" style="margin-top: 15px;">
             <div class="col-md-12" style="text-align: middle; vertical-align: middle;">
-		<li>2019, awarded UCL Research Studentship</li>
+		<li>2019-2023, awarded UCL Research Studentship</li>
 		<li>2018, awarded National Scholarship, Ministry of Education</li>
 		<li>2018, awarded ICDM 2018 Student Travel Award</li>
 		<li>2018, awarded SIGIR Student Travel Grant for CIKM 2018</li>
