--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
             <br><h2>Publications</h2>
             <div class="container">
             <div class="col-md-11" style="text-align: middle; vertical-align: middle;">
+            <li class="paper"> 
+	      Hong Huang, Yu Song, <strong>Fanghua Ye</strong>, Xing Xie, Xuanhua Shi, Hai Jin, "<u>Multi-Stage Network Embedding for Exploring Heterogeneous Edges</u>," TKDD, 2020.
+            </li>
             <li class="paper">
 	      Rong-Hua Li, Lu Qin, <strong>Fanghua Ye</strong>, Guoren Wang, Jeffrey Xu Yu, Xiaokui Xiao, Nong Xiao, Zibin Zheng, "<u>Finding Skyline Communities in Multi-Valued Networks</u>," VLDB Journal, 2020.
 	    </li>
