--- a/index.html
+++ b/index.html
@@ -315,7 +315,10 @@
 	    </li>
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Chuan Chen, Zhiyuan Wen, Zibin Zheng, Wuhui Chen, Yuren Zhou, "<u>Homophily Preserving Community Detection</u>," IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2019. [<a href="https://github.com/smartyfh/HPNMF"><font size="4" color="red">code</font></a>]
-	    </li>    
+	    </li> 
+            <li class="paper">
+	      Pairui Li, Chuan Chen, Wujie Zheng, Yuetang Deng, <strong>Fanghua Ye</strong>, Zibin Zheng, "<u>STD: An Automatic Evaluation Metric for Machine Translation Based on Word Embeddings</u>," IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), 2019.
+            </li>
             <li class="paper">
 	      <strong>Fanghua Ye</strong>, Shenghui Li, Zhiwei Lin, Chuan Chen, Zibin Zheng, "<u>Adaptive Affinity Learning for Accurate Community Detection</u>," IEEE International Conference on Data Mining (<a href="http://icdm2018.org/">ICDM'18</a>), 2018 (short). [<a href="https://github.com/smartyfh/AANMF"><font size="4" color="red">code</font></a>]
             </li>
